2002-09-29  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (output_file_name): Updated for new cob_file scheme.
	* parser.y (sort_keys): Rename `cob_sort_keys' to `cob_sort_init'.

2002-09-28  Keisuke Nishida  <knishida@netlab.jp>

	* tree.c (init_constants): Typo fixed.  Thanks to Mike Black.

2002-09-24  Keisuke Nishida  <knishida@netlab.jp>

	* scanner.l: Do not support single-quoted strings.

2002-09-24  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (codegen_1): Do not support non-computed-goto jump.

2002-09-24  Keisuke Nishida  <knishida@netlab.jp>

	* tree.h (cobc_parameter): Renamed from cobc_generic.
	All files updated.

2002-09-24  Keisuke Nishida  <knishida@netlab.jp>

	* inline.c (output_call_statement): Output the pointer to the
	content length for COBC_CALL_BY_LENGTH.

2002-09-23  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c (process_translate): Verbose output.

2002-09-17  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c (probe_source_format): Removed.
	(preprocess): Don't set source format.
	(process_command_line): Set cobpp flags here.

2002-09-17  Keisuke Nishida  <knishida@netlab.jp>

	* tree.h (COBC_CALL_BY_LENGTH): New macro.
	* reserved.c (reserved_words): Add LENGTH.
	* parser.y (call_mode): Add CONTENT LENGTH.
	* inline.c (output_call_statement): Handle COBC_CALL_BY_LENGTH.

2002-09-13  Keisuke Nishida  <knishida@netlab.jp>

	* tree.h (cobc_field): Remove `category'.  Related files updated.
	* tree.c (setup_parameters): Merge `validate_field' and `setup_cname'.
	* parser.y (validate_field): Removed.

2002-09-12  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.c (temp_name): Call GetTempFileName with 3rd argument 0.
	Call DeleteFile to remove the temporary file.

2002-09-12  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (validate_field_tree): Validate groups not having PICTURE.
	(validate_field_tree): Create PICTURE of INDEX here, not in USAGE.

2002-09-09  Keisuke Nishida  <knishida@netlab.jp>
