@@ -20,9 +20,11 @@
 #ifndef _COBC_H_
 #define _COBC_H_
 
+#include "config.h"
+
 #include <stdio.h>
 
-#define COBC_PACKAGE	"cobc (OpenCOBOL)"
+#define COBC_PACKAGE	"cobc (" PACKAGE_NAME ")"
 #define COBC_VERSION	PACKAGE_VERSION
 #define COBC_COPYRIGHT	"Copyright (C) 2001-2002 Keisuke Nishida\n"
 
