@@ -1,3 +1,7 @@
+2002-09-30  Keisuke Nishida  <knishida@netlab.jp>
+
+	* cobpp.h (COBPP_PACKAGE): Use PACKAGE_NAME.
+
 2002-09-24  Keisuke Nishida  <knishida@netlab.jp>
 
 	* scanner.l: Do not support single-quoted strings.
