@@ -1,3 +1,7 @@
+2002-09-30  Keisuke Nishida  <knishida@netlab.jp>
+
+	* cobc.h (COBC_PACKAGE): Use PACKAGE_NAME.
+
 2002-09-29  Keisuke Nishida  <knishida@netlab.jp>
 
 	* codegen.c (output_file_name): Updated for new cob_file scheme.
